Fix link wrapping in preview

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -397,3 +397,7 @@ main {
 .product-page-intro h1{
   font-family: "Helvetica Neue", Helvetica, Arial,sans-serif;
 }
+
+.email-message-body a{ 
+  word-break: break-all;
+}
